gcc/testsuite/g++.old-deja/g++.bob/friend1.C
// { dg-do assemble  }
class C {
public:
  static friend int f(); // { dg-error "" } 
};
